--- a/style.css
+++ b/style.css
@@ -10,3 +10,16 @@
   width: 100px;
   height: 100px;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#inputText {
+  width: 100px;
+  height: 50px;
+  border: 1px solid black;
+}
